# Flight-Trades

./: .gitattributes  .gitignore  README.md  flight_profile.csv  main.py  p1_mass_thrust_trade_results.csv  requirements.txt  seb_flight_profile.csv  seb_wind_test_config_results.csv  test_config_results.csv  windDataParser.py
.claude/: settings.local.json
6DOF/: ConfigLoader.py  CustomInterpolator.py  Engine.py  Environment.py  FlightConditions.py  GravityModel.py  ORKDataGrabber.py  Observer.py  RASAeroDataGrabber.py  Recovery.py  Rocket.py  SEBWindModel.py  SimSnapshot.py  SimpleWindModel.py  SimulationConditions.py  SimulationHandler.py  SimulationLoop.py  Vector3D.py  WindModel.py  pyproject.toml  sample_config.yaml  seb_wind_test_config.yaml  test_config.yaml
6DOF/User-Reference-CSVs/: p1ORK-6dof.csv
6DOF/flight_sim/core/: config_loader.py  sim_conditions.py  sim_handler.py  sim_loop.py  sim_snapshot.py
6DOF/flight_sim/data_helpers/: ork_loader.py  rasaero_loader.py  vector3d.py
6DOF/flight_sim/flight_components/: engine.py  gravity_model.py  recovery.py  rocket.py
6DOF/flight_sim/wind/: seb_wind_model.py  simple_wind_model.py  wind_model_base.py
SEB-windmodel/: pyproject.toml
SEB-windmodel/scripts/: fetch_month.py  validate_model.py
SEB-windmodel/seb_wind_model/: __init__.py  eof.py
SEB-windmodel/tests/: conftest.py  test_eof.py  test_von_karman.py  test_wind_model.py
december_07_2025_1300_at_35.35_-117.81/: east_wind_means.csv  era5_wind_data.nc  north_wind_means.csv  pressure_levels.csv  wind_direction.csv  wind_magnitude.csv
(+17 files in other folders)
